infrastructure/deployment-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopping-list-postgres
  name: shopping-list-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-list-postgres
  template:
    metadata:
      labels:
        app: shopping-list-postgres
    spec:
      containers:
      - name: shopping-list-postgres
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        image: postgres:15.4
