infrastructure/service-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: shopping-list-postgres
spec:
  selector:
    app: shopping-list-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
