infrastructure/service-shopping-list-api.yml
apiVersion: v1
kind: Service
metadata:
  name: shopping-list-api
spec:
  selector:
    app: shopping-list-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
