infrastructure/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-list-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /api/v1/shopping-items
          pathType: Prefix
          backend:
            service:
              name: shopping-list-api
              port:
                number: 8081
        - path: /
          pathType: Prefix
          backend:
            service:
              name: shopping-list-front-end
              port:
                number: 8080
